fix: owner name in event banner

--- a/Views/Shared/_EventBannerPartial.cshtml
+++ b/Views/Shared/_EventBannerPartial.cshtml
@@ -62,8 +62,7 @@
                             <div class="owner-picture">
                                 <img alt="Owner picture" src="~/img/default.jpg" draggable="false">
                             </div>
-                            @* <span class="owner-name">@evt.Owner.Name @evt.Owner.Surname</span> *@
-                            <span class="owner-name">Somethinglong SomethinglongToo</span>
+                            <span class="owner-name">@evt.Owner.Name @evt.Owner.Surname</span>
                         </div>
                     </div>
                     <div class="evt-body">
