chore: remove warning in layout

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
 <body>
 
     @{
-        string currentRoute = Url.RouteUrl(ViewContext.RouteData.Values);
+        string currentRoute = Url.RouteUrl(ViewContext.RouteData.Values)!;
         string userExist = ViewContext.HttpContext.Session.GetString("user")!;
     }
 
