--- a/Views/Shared/_EventBannerPartial.cshtml
+++ b/Views/Shared/_EventBannerPartial.cshtml
@@ -1,43 +1,19 @@
 @model PaginationResponse<HaBuddies.Models.Event>
+@using HaBuddies.Models
 @using HaBuddies.Constants
+@using static HaBuddies.Services.Utils.EventUtil
 @using Newtonsoft.Json;
-
-@functions {
-    public bool IsOwnedEvent(dynamic userObj, HaBuddies.Models.Event evt) {
-        if (userObj != null) {
-            if (evt.OwnerId == userObj.Id.ToString()) return true;
-        }
-        return false;
-    }
-
-    public bool IsJoinable(dynamic userObj, HaBuddies.Models.Event evt) {
-        if (userObj != null) {
-            if (userObj.Age >= evt.MinAgeRequirement && userObj.Age <= evt.MaxAgeRequirement && 
-                evt.GenderRequirement.Any(s => s.Contains(userObj.Gender.ToString()))) {
-                return true;
-            }
-        }
-        return false;
-    }
-
-    public bool IsCurrentlyJoined(dynamic userObj, HaBuddies.Models.Event evt) {
-        if (userObj != null) {
-            if (evt.SubscribersId.Any(s => s.Contains(userObj.Id.ToString()))) return true;
-        }
-        return false;
-    }
-}
 
 @{
     string userExist = ViewContext.HttpContext.Session.GetString("user")!;
-    dynamic userObject = null!;
+    UserNoPassword userObject = null!;
     if (userExist != null) {
-        userObject = JsonConvert.DeserializeObject(userExist)!;
+        userObject = JsonConvert.DeserializeObject<UserNoPassword>(userExist)!;
     }
 }
 
 @if (Model.Count > 0) {
-    @foreach (HaBuddies.Models.Event evt in Model.Data)
+    @foreach (Event evt in Model.Data)
     {
         if (evt.IsOpen == true) {
             var category = evt.Category;
