style: update theme

--- a/wwwroot/css/theme.css
+++ b/wwwroot/css/theme.css
@@ -1,7 +1,7 @@
 :root {
     --light-grey: #e3e3e3;
-    --normal-grey: #5e5e5e;
-    --dark-grey: #3e3e3e;
+    --normal-grey: #9b9b9b;
+    --dark-grey: #5e5e5e;
     --light-blue: #97cdff;
     --normal-blue: #2898FF;
     --dark-blue: #006acd;
