--- a/wwwroot/css/home.css
+++ b/wwwroot/css/home.css
@@ -7,7 +7,7 @@
 .filter {
   display: inline-block;
   background-color: white;
-  color: var(--normal-grey);
+  color: var(--dark-grey);
   font-size: 18px;
   padding: 0.6rem 0.8rem;
   border: 2px solid var(--light-grey);
