--- a/wwwroot/css/layout.css
+++ b/wwwroot/css/layout.css
@@ -47,7 +47,7 @@ header li {
 }
 
 header li a{
-  color: var(--normal-grey);
+  color: var(--dark-grey);
   font-size: 15px;
   font-weight: 500;
   padding: 0.5rem 0.7rem;
@@ -144,7 +144,7 @@ header li a:hover {
   line-height: 4rem;
   width: 100%;
   height: 100%;
-  color: var(--normal-grey);
+  color: var(--dark-grey);
   border-right: 0 solid var(--border-color);
   border-bottom: 1px solid var(--border-color);
   transition: 500ms;
