--- a/Views/Shared/_EventBannerPartial.cshtml
+++ b/Views/Shared/_EventBannerPartial.cshtml
@@ -15,49 +15,48 @@
 @if (Model.Count > 0) {
     @foreach (Event evt in Model.Data)
     {
-        if (evt.IsOpen == true) {
-            var category = evt.Category;
-            int currentEnroll = evt.SubscribersId.Count + evt.QueueId.Count;
+        var category = evt.Category;
+        int currentEnroll = evt.SubscribersId.Count + evt.QueueId.Count;
+        string enrollMsg = evt.IsOpen?$"{currentEnroll}/{evt.EnrollSize}":$"{evt.EnrollSize}";
 
-            bool selfOwned = IsOwnedEvent(userObject, evt);
-            bool canJoin = IsJoinable(userObject, evt);
-            bool currentlyJoin = IsCurrentlyJoined(userObject, evt);
-            
-            <div class="banner" id="@evt.Id">
-                <a draggable="false" asp-controller="Event" asp-action="Details" asp-route-id="@evt.Id">
-                    <div class="evt-heading">
-                        <div class="category" style="background-color: @Category.GetColorHex(category)">
-                            @Html.Raw(Category.GetIconHtml(category))
-                            <span class="evt-category">@category</span>
-                        </div>
-                        <h2 class="evt-title">@evt.Title</h2>
-                        <span class="evt-enrollsize @(currentEnroll<evt.EnrollSize?"vacant":"full")">
-                            @currentEnroll/@evt.EnrollSize <i class="fa-solid fa-user-group"></i>
-                        </span>
-                        <div class="owner">
-                            <div class="owner-picture">
-                                <img alt="Owner picture" src="~/img/default.jpg" draggable="false">
-                            </div>
-                            <span class="owner-name">@evt.Owner.Name @evt.Owner.Surname</span>
-                        </div>
+        bool selfOwned = IsOwnedEvent(userObject, evt);
+        bool canJoin = IsJoinable(userObject, evt);
+        bool currentlyJoin = IsCurrentlyJoined(userObject, evt);
+        
+        <div class="banner" id="@evt.Id">
+            <a draggable="false" asp-controller="Event" asp-action="Details" asp-route-id="@evt.Id">
+                <div class="evt-heading">
+                    <div class="category" style="background-color: @Category.GetColorHex(category)">
+                        @Html.Raw(Category.GetIconHtml(category))
+                        <span class="evt-category">@category</span>
                     </div>
-                    <div class="evt-body">
-                        <span class="evt-description">@evt.Description</span>
-                        <span class="evt-enddate">Close Date<br>@evt.EndDate.ToShortDateString()</span>
+                    <h2 class="evt-title">@evt.Title</h2>
+                    <span class="evt-enrollsize @(evt.IsOpen?(currentEnroll<evt.EnrollSize?"vacant":"full"):"close")">
+                        @enrollMsg <i class="fa-solid fa-user-group"></i>
+                    </span>
+                    <div class="owner">
+                        <div class="owner-picture">
+                            <img alt="Owner picture" src="~/img/default.jpg" draggable="false">
+                        </div>
+                        <span class="owner-name">@evt.Owner.Name @evt.Owner.Surname</span>
                     </div>
-                </a>
-                @if (!selfOwned) {
-                    <button type="button" class="evt-join @(canJoin?"active":"") @(currentlyJoin?"leave":"join")" onclick=@(canJoin?"myFunction(this)":"")>
-                        @if (currentlyJoin) {
-                            <text>ออก</text>
-                        }
-                        else {
-                            <text>เข้าร่วม</text>
-                        }
-                    </button>
-                }
-            </div>
-        }
+                </div>
+                <div class="evt-body">
+                    <span class="evt-description">@evt.Description</span>
+                    <span class="evt-enddate">Close Date<br>@evt.EndDate.ToShortDateString()</span>
+                </div>
+            </a>
+            @if (!selfOwned) {
+                <button type="button" class="evt-join @(canJoin?"active":"") @(currentlyJoin?"leave":"join")" onclick=@(canJoin?"myFunction(this)":"")>
+                    @if (currentlyJoin) {
+                        <text>ออก</text>
+                    }
+                    else {
+                        <text>เข้าร่วม</text>
+                    }
+                </button>
+            }
+        </div>
     }
     <script>
         function myFunction(element) {
