--- a/wwwroot/css/banner.css
+++ b/wwwroot/css/banner.css
@@ -84,6 +84,10 @@
     background-color: var(--red-color);
 }
 
+.banner .evt-enrollsize.close {
+    background-color: var(--normal-grey);
+}
+
 .banner .evt-enrollsize i {
     margin-left: 0.2rem;
 }
