--- a/Views/Event/Index.cshtml
+++ b/Views/Event/Index.cshtml
@@ -65,5 +65,15 @@
         };
         var infiniteScroll = new EventInfiniteScroll("event-banner");
         infiniteScroll.loadEvent(false);
+
+        function myFunction(element) {
+            var bannerId = element.parentElement.id;
+            if (element.classList.contains("join")) {
+                alert("Joined " + bannerId);
+            }
+            else {
+                alert("Left " + bannerId);
+            }
+        }
     </script>
 }
