--- a/Views/Event/Index.cshtml
+++ b/Views/Event/Index.cshtml
@@ -15,65 +15,10 @@
 
 <div id="event-banner"></div>
 
-@section Scripts{
+@section Scripts {
+    <script src="~/js/InfiniteScroll.js" asp-append-version="true"></script>
     <script>
-        function EventInfiniteScroll(divId) {
-            var xmlhttp = new XMLHttpRequest();
-            const divBody = document.getElementById(divId);
-            this.loading = false;
-            this.category = "";
-            this.page = 1;
-            this.perPage = 10;
-            this.data = ""
-            var self = this;
-
-            this.setCategory = function(category) {
-                self.category = category;
-            }
-
-            this.loadEvent = function(refresh=false) {
-                xmlhttp.onreadystatechange = function() {
-                    if (xmlhttp.readyState == XMLHttpRequest.DONE && xmlhttp.status == 200) {
-                        divBody.insertAdjacentHTML('beforeEnd', xmlhttp.responseText);
-                        self.loading = false;
-                        self.page += 1;
-                    }
-                };
-
-                if (refresh) {
-                    divBody.innerHTML = "";
-                    self.page = 1;
-                }
-
-                self.data = 'category=' + encodeURIComponent(self.category) +
-                            '&page=' + encodeURIComponent(self.page) +
-                            '&perPage=' + encodeURIComponent(self.perPage);
-
-                self.loading = true;
-                xmlhttp.open("POST", '@Url.Action("LoadEvent", "Event")', true);
-                xmlhttp.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
-                xmlhttp.send(self.data);
-            };
-
-            window.onscroll = function (ev) {
-                if ((window.innerHeight + window.scrollY) >= (document.documentElement.scrollHeight)) {
-                    if (!self.loading) {
-                        self.loadEvent(false);
-                    }
-                }
-            };
-        };
-        var infiniteScroll = new EventInfiniteScroll("event-banner");
+        var infiniteScroll = new EventInfiniteScroll("event-banner", '@Url.Action("LoadEvent", "Event")');
         infiniteScroll.loadEvent(false);
-
-        function myFunction(element) {
-            var bannerId = element.parentElement.id;
-            if (element.classList.contains("join")) {
-                alert("Joined " + bannerId);
-            }
-            else {
-                alert("Left " + bannerId);
-            }
-        }
     </script>
 }
