--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Newtonsoft.Json;
+@inject HaBuddies.Services.ImageService ImageService;
 
 <!DOCTYPE html>
 <html lang="en">
@@ -33,13 +34,15 @@
                 @{
                     if (userExist != null) {
                         dynamic userObject = JsonConvert.DeserializeObject(userExist)!;
+                        string userId = userObject.Id;
                         string uName = userObject.Name;
                         string uSurname = userObject.Surname;
+                        string imageProfilePath = ImageService.GetUserImageFileExtension(userId);
 
                         <a class="profile-button" asp-area="" asp-controller="User" asp-action="MyProfile">
                             <span class="profile-name">@uName @uSurname</span>
                             <div class="profile-picture">
-                                <img alt="Profile picture" src="~/img/default.jpg" draggable="false">
+                                <img alt="Profile picture" src="~/@imageProfilePath" draggable="false">
                             </div>
                         </a>
                     }
