--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -29,7 +29,8 @@
             </li>
             <li>
                 <a class="notification-button" asp-area="" asp-controller="Event" asp-action=""><i class="fa-solid fa-bell"></i></a>
-                 
+                <div class ="notification-block">
+                </div>
             </li>
             <li>
                 @{
