--- a/Views/Shared/_EventHistory.cshtml
+++ b/Views/Shared/_EventHistory.cshtml
@@ -11,11 +11,12 @@
         userObject = JsonConvert.DeserializeObject<UserNoPassword>(userExist)!;
     }
 }
+@if (Model.Count() > 0) {
     @foreach (Event evt in Model)
     {
         var category = evt.Category;
         int currentEnroll = evt.SubscribersId.Count;
-        string enrollMsg =$"{currentEnroll}";
+        string enrollMsg = $"{currentEnroll}";
 
         bool selfOwned = IsOwnedEvent(userObject, evt);
         bool canJoin = IsJoinable(userObject, evt);
@@ -46,6 +47,15 @@
             </a>
         </div>
     }
+}
+    else {
+    <div class="no-event">
+        <img src="https://img.freepik.com/free-vector/group-therapy-illustration-concept_52683-45727.jpg?t=st=1709623373~exp=1709626973~hmac=78df7e8d67f4c5f6b0d06d0113b240ce820bf4d30f74051aaf195c505371a8d0" alt="no_event">
+        <h2>You don't have joined Event</h2>
+        <p>It has been quiet recently. Let's join some events!</p>
+        <a class="create-event" asp-area="" asp-controller="Event" asp-action="Index">Joined event</a>
+    </div>
+}
     <script>
         function myFunction(element) {
             var bannerId = element.parentElement.id;
@@ -57,4 +67,4 @@
             }
         }
     </script>
-    
+
