--- a/Views/User/MyProfile.cshtml
+++ b/Views/User/MyProfile.cshtml
@@ -12,7 +12,7 @@
             <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_1280.png" alt="Profile Picture">
             <div class="profile-name">
                 <h2><span class="name">@Model.Name @Model.Surname </span></h2><br>
-                <span class="nickname">@Model.Bio</span><br>
+                <span class="about">@Model.Bio</span><br>
             </div>
             <div class="editbutton">
             <button class="editProfileButton"><i class="fa fa-pencil" aria-hidden="true"></i></button>
@@ -38,34 +38,31 @@
         
 
     <div class="editProfile" style="display: none;" >
-        <form class="editProfile" id="editProfileForm" method="put" action="@Url.Action("Update", "User")">
+        <form class="editProfile" id="editProfileForm" method="put" action='@Url.Action("Update", "User")'>
             <label for="editName">Name</label><br>
-            <input type="text" class="editName" name="editName" value="@Model.Name"><br>
+            <input type="text" class="editName" name="Name" value="@Model.Name"><br>
 
             <label for="editSurname">Surname</label><br>
-            <input type="text" class="editSurname" name="editSurname" value="@Model.Surname"><br>
+            <input type="text" class="editSurname" name="Surname" value="@Model.Surname"><br>
+
+            @* <label for="editPassword">Password</label><br>
+            <input type="text" class="editPassword" name="Password" value="@Model.Password"><br> *@
 
             <label for="editGender">Gender:</label><br>
-            <select class="editGender" name="editGender">
-                <option value="Null" disabled>Gender</option>
+            <select class="editGender" name="Gender">
+                <option value="Gender" disabled>Gender</option>
                 <option value="Male" selected='@(Model.Gender == "Male")'>Male</option>
                 <option value="Female" selected='@(Model.Gender == "Female")'>Female</option>
                 <option value="Others" selected='@(Model.Gender == "Others")'>Others</option>
             </select><br>
 
             <label for="editAge">Age</label><br>
-            <input type="number" class="editAge" name="editAge" value="@Model.Age"><br>
-
-            <label for="editEmail">Email</label><br>
-            <input type="email" class="editEmail" name="editEmail" value="@Model.Email"><br>
+            <input type="number" class="editAge" name="Age" value="@Model.Age"><br>
 
             <label for="editBio">About me</label><br>
-            <textarea class="editBio" name="editBio">@Model.Bio</textarea><br>
+            <textarea class="editBio" name="Bio">@Model.Bio</textarea><br>
 
-            <input type="submit" value='Update'class="saveProfileButton">
-            
-
-
+            <input type="submit" value='Update' class="saveProfileButton">
         </form>
     </div>
     </div>
@@ -81,7 +78,7 @@
             });
         });
 
-        document.addEventListener("DOMContentLoaded", function () {
+       document.addEventListener("DOMContentLoaded", function () {
             const editProfileButton = document.querySelector(".editProfileButton");
             const editProfileForm = document.querySelector(".editProfile");
             const profileInfo = document.querySelector("#profileInfo");
@@ -91,7 +88,7 @@
                 profileInfo.style.display = "none";
             });
 
-            editProfileForm.addEventListener("submit", async function (event) {
+            @* editProfileForm.addEventListener("submit", async function (event) {
                 event.preventDefault();
 
                 const formData = new FormData(editProfileForm);
@@ -129,8 +126,8 @@
                 } catch (error) {
                     console.error("Error updating profile:", error);
                 }
-            });
-        });
+            });  *@
+        }); 
 
     </script>
 </div>
